--- a/AtaSemOtomotiv/wwwroot/css/style.css
+++ b/AtaSemOtomotiv/wwwroot/css/style.css
@@ -107,6 +107,7 @@ body {
         height: 80px;
         object-fit: contain;
         margin-bottom: 10px;
+        display:block;
     }
 
 .brand-name {
